[tool.poetry]
name = "jupyterlab_polus_render"
version = "0.1.0"
description = "Displays Polus Render dashboard in Jupyter Notebooks."
authors = ["Jeff Chen <Jeff.Chen@axleinfo.com>"]
packages = [{ include = "polus"}, {include = "render-server-ext"}]
License = "MIT"
readme = "README.md"
repository = "https://github.com/jcaxle/jupyterlab-extensions/tree/repo/jupyterlab_polus_render"

[tool.poetry.dependencies]
python = ">=3.9" 
render-server-ext = { path = "./render-server-ext/", develop = false }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
