[build-system]
requires = [
    "hatchling>=1.21.1",
    "jupyterlab>=4.0.0,<5",
    "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_polus_render"
description = "A Jupyterlab extension for Polus Render."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
authors = [
    { name = "Akshat Saini, Jeff Chen", email = "akshat.saini@axleinfo.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ipywidgets>=8.0.0",
]
version = "1.0.1"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/PolusAI/jupyterlab-extensions/tree/master/jupyterlab_polus_render"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
artifacts = [
    "jupyterlab_polus_render/nbextension/index.*",
    "jupyterlab_polus_render/labextension/*.tgz",
    "jupyterlab_polus_render/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_polus_render/nbextension" = "share/jupyter/nbextensions/jupyterlab_polus_render"
"jupyterlab_polus_render/labextension" = "share/jupyter/labextensions/jupyterlab_polus_render"
"./install.json" = "share/jupyter/labextensions/jupyterlab_polus_render/install.json"
"./jupyterlab_polus_render.json" = "etc/jupyter/nbconfig/notebook.d/jupyterlab_polus_render.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_polus_render/nbextension/index.js",
    "jupyterlab_polus_render/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab_polus_render/nbextension/index.js",
    "jupyterlab_polus_render/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.3",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "jupyterlab_polus_render/_version.py" },
]

[tool.tbump.version]
current = "1.0.1"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
