[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-polus-render"
description = "JupyterLab Polus Render makes Polus Render available as a JupyterLab extension."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "Jeff Chen, Akshat Saini", email = "akshat.saini@axleinfo.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
]
version = "0.1.0.dev0"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/PolusAI/PolusAI/jupyterlab-extensions"

[tool.hatch.build]
artifacts = [
    "jupyterlab-polus-render/nbextension/index.*",
    "jupyterlab-polus-render/labextension/*.tgz",
    "jupyterlab-polus-render/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab-polus-render/nbextension" = "share/jupyter/nbextensions/jupyterlab-polus-render"
"jupyterlab-polus-render/labextension" = "share/jupyter/labextensions/jupyterlab-polus-render"
"./install.json" = "share/jupyter/labextensions/jupyterlab-polus-render/install.json"
"./jupyterlab-polus-render.json" = "etc/jupyter/nbconfig/notebook.d/jupyterlab-polus-render.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab-polus-render/nbextension/index.js",
    "jupyterlab-polus-render/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab-polus-render/nbextension/index.js",
    "jupyterlab-polus-render/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "jupyterlab-polus-render/_version.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
